# internal/handler/v1/sidecar_handler.go
@@ -8,6 +8,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"github.com/gookit/goutil"
 	"net/http"
 )
 
@@ -27,7 +28,7 @@ func NewSidecarHandler(sidecarService service.SidecarService) *SidecarHandler {
 // Tags: sidecar
 // @Accept json
 // @Produce json
-// @Success 200 {object} entity.ServerVersionResponse
+// @Success 200 {object} entity.ServerVersionEntity
 // @Router /api [get]
 func (h *SidecarHandler) ServerInfo() gin.HandlerFunc {
 	return func(c *gin.Context) {
@@ -43,8 +44,8 @@ func (h *SidecarHandler) ServerInfo() gin.HandlerFunc {
 // @Accept json
 // @Produce json
 // @Param node_id path string true "node_id"
-// @Param req body entity.RegistrationRequest true "请求体"
-// @Success 200 {object} entity.ResponseCollectorRegistration
+// @Param req body entity.RegistrationSidecarEntity true "请求体"
+// @Success 200 {object} entity.CollectorRegistrationEntity
 // @Router /api/sidecars/{node_id} [put]
 func (h *SidecarHandler) UpdateSidecarNodeInfo() gin.HandlerFunc {
 	return func(c *gin.Context) {
@@ -52,7 +53,7 @@ func (h *SidecarHandler) UpdateSidecarNodeInfo() gin.HandlerFunc {
 		// get If-None-Match from header
 		checkSum := c.GetHeader("If-None-Match")
 
-		req := entity.RegistrationRequest{}
+		req := entity.RegistrationSidecarEntity{}
 		if err := c.ShouldBindJSON(&req); err != nil {
 			c.JSON(http.StatusBadRequest, errors.WithCode(ecode.ValidateErr, err.Error()))
 		}
@@ -76,7 +77,7 @@ func (h *SidecarHandler) UpdateSidecarNodeInfo() gin.HandlerFunc {
 // Tags: sidecar
 // @Accept json
 // @Produce json
-// @Success 200 {object} entity.ResponseBackendList
+// @Success 200 {object} entity.BackendListEntity
 // @Router /api/sidecar/collectors [get]
 func (h *SidecarHandler) ListCollectors() gin.HandlerFunc {
 	return func(c *gin.Context) {
@@ -102,7 +103,7 @@ func (h *SidecarHandler) ListCollectors() gin.HandlerFunc {
 // @Produce json
 // @Param node_id path string true "node_id"
 // @Param configuration_id path string true "configuration_id"
-// @Success 200 {object} entity.ResponseCollectorConfiguration
+// @Success 200 {object} entity.CollectorConfigurationEntity
 // @Router /api/sidecar/configurations/render/{node_id}/{configuration_id} [get]
 func (h *SidecarHandler) GetConfiguration() gin.HandlerFunc {
 	return func(c *gin.Context) {
@@ -111,8 +112,8 @@ func (h *SidecarHandler) GetConfiguration() gin.HandlerFunc {
 		nodeId := c.Param("node_id")
 		configurationId := c.Param("configuration_id")
 
-		eTag := h.sidecarService.GetConfigurationETag(configurationId)
-		result := h.sidecarService.RenderConfiguration(nodeId, configurationId)
+		eTag := h.sidecarService.GetConfigurationETag(goutil.Uint(configurationId))
+		result := h.sidecarService.RenderConfiguration(nodeId, goutil.Uint(configurationId))
 		c.Header("ETag", eTag)
 		if fmt.Sprintf("\"%s\"", eTag) == checkSum {
 			c.JSON(http.StatusNotModified, result)
